--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,15 @@
 <body>
     {% block content %}
         <h1>Home Page</h1>
+            <h2>All books</h2>
+            {% for book in book_list %}
+                <ul>
+                <li>Title: {{ book.title }}</li>
+                <li>Subtitle: {{ book.subtitle }}</li>
+                <li>Author: {{ book.author }}</li>
+                <li>ISBN: {{ book.isbn }}</li>
+                </ul>
+            {% endfor %}
     {% endblock content %}
 </body>
 </html>
